syntax = "proto3";
package rental.v1;
option go_package="coolcar/rental/api/gen/v1;rentalpb";

enum Gender {
  G_NOT_SPECIFIED = 0;
  MALE = 1;
  FEMALE = 2;
}

enum IdentityStatus {
  UNSUBMITTED = 0;
  PENDING = 1;
  VERIFIED = 2;
}

message Identity {
  string lic_number = 1;
  string name = 2;
  Gender gender = 3;
  int64 birth_date_ms = 4;
}

message Profile {
  Identity identity = 1;
  IdentityStatus status = 2;
}
